add frontend pages * update api
